<resources>
    <string name="app_name">SafeBodyguard</string>
    <string name="update_version">新版本:</string>
    <string name="update_version_yes">立即更新</string>
    <string name="update_version_no">稍後再說</string>
    <string name="tv_update_version">版本名稱:</string>
    <string name="apk_name">com.app.safeBodyGuard</string>
    <string name="apk_check_version_url">http://iml1s.dsmynas.net:8787/android_splash_test.json</string>
    <string name="apk_download_url">http://appupdate.kcaisafe.com/Download?Name=KC</string>
    <string name="gv_home_title">功能列表</string>
    <string name="gv_home_marquee_text">I am the bone of my sword.    Steel is my body,
        and fire is my blood.    I have created over a thousand blades.
           Unknown to Death.     Nor known to Life.</string>
    <string name="dialog_set_pwd_hint">輸入密碼:</string>
    <string name="dialog_set_pwd_confirm_hint">確認密碼:</string>
    <string name="dialog_yes">確認</string>
    <string name="dialog_no">取消</string>
    <string name="btn_next">下一步</string>
    <string name="btn_pre">上一步</string>
    <string name="activity_setting_phone_address_service_open">已開啟</string>
    <string name="activity_setting_phone_address_service_off">已關閉</string>
    <string name="select_all">全選</string>
    <string name="select_anti">反選</string>
    <string name="one_key_clear">一鍵清理</string>
    <string name="setting">設定</string>
    <string name="lock_app_count">已加鎖應用:</string>
    <string name="unlock_app_count">未加鎖應用:</string>
</resources>
